# tubee

./: .coveragerc.txt  .editorconfig  .flake8  .gcloudignore  .gitignore  .pre-commit-config.yaml  .run-wsgi.sh  .travis.yml  Dockerfile  Makefile  Pipfile  Procfile  README.md  Tubee.py  app.py  boot.sh  celery_worker.py  config.py  dev-requirements.txt  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  wsgi.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  docker-docs.yml  docs.yml  license-scan.yml  release.yml  style.yml  test.yml  testing.yml
.travis/: app.yaml.enc  client_secret.json.enc  cron.yaml.enc  deploy_files.tar.enc  deploy_files.tar.gz.enc  gcloud-app-engine-key.json.enc  travis_key.enc
app/: __init__.py  form.py  forms.py  handler.py  models.py  views.py
app/helper/: __init__.py  dropbox.py  hub.py  line_notify.py  schedule_function.py
app/models/: __init__.py  apsheduler_jobs.py  callback.py  channel.py  notification.py  user.py  user_subscription.py  video.py
app/routes/: admin.py  api.py  channel.py  dev.py  login.py  main.py  tmp.py  user.py
app/templates/: ! template for base.html  base.html  channel.html  dashboard.html  empty.html  error.html  hub_dashboard.html  layout.html  login.html  map.html  pushover_dashboard.html  pushover_history.html  pushover_push.html  register.html  scheduler_dashboard.html  setting.html  status.html  subscribe.html  summary.html  youtube_subscription.html  youtube_subscription_page.html  youtube_video.html
backend/: Pipfile
backend/deploy/: nginx-uwsgi-ini
backend/migrations/: env.py
backend/tests/: test_basics.py  test_hub_package.py  test_routes_channel.py
bootscript/: gunicorn.sh  uwsgi.sh
conf/: nginx.conf
deploy/: README.md  apache-mod_wsgi-script  apache_mod-wsgi_script  gae-app.yaml  gae-gunicorn.conf.py  heroku-procfile  heroku-uwsgi.ini  nginx-uwsgi-ini  nginx-uwsgi-script  nginx-uwsgi-service  nginx-uwsgi.ini
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  main.js  router.js
instance/: .gitignore  docker-compose.override.yml  gunicorn.conf.py  logging.cfg  logging_celery.cfg  nginx.conf  production.template.env
migrations/: env.py
migrations/versions/: 0749207b97a6_.py  27eb46e7065c_.py  2be32221762a_video_check_table.py  34935013ab33_.py  34935013ab33_Initial Build.py  34935013ab33_initial_build.py  36a02dfb6a68_.py  37c20f05bf44_add_action_automate_column.py  3b6601a39984_.py  3b7a313a1cb3_.py  3e61825e9188_Action username foreign key.py  3e61825e9188_action_username_foreign_key.py  4a60cbccd620_.py  4a841a1a3354_.py  61889220ba8f_.py  75b38284c03f_.py  76df6ab4150a_.py  77c3afc76fc0_.py  8271190eec99_Action Tag Integration.py  8271190eec99_action_tag_integration.py  88fff34fba54_.py  8a3d9c34c719_.py  9474e9817305_Drop Conflict Constraint.py  9474e9817305_drop_conflict_constraint.py  9497b16da8bc_.py  9542bd4e6db2_add_tag_index.py  9b13f5124ffb_.py  a1502f920f26_.py  a9a093c73a90_.py  b4a059acf2ef_.py  c38453659a16_.py  c69d15999683_.py  c79111fd3943_.py  c960e1668521_.py  c9e504f25783_.py  (+10 more)
templates/: base.html  empty.html  error.html  hub_history.html  layout.html  login.html  map.html  pushover_history.html  setting.html  status.html  status_detail.html  subscribe.html  unsubscribe.html  youtube_subscription.html
tests/: test_basics.py  test_handler.py  test_hub.py  test_hub_package.py  test_main_routes.py  test_routes.py  test_routes_channel.py  test_routes_main.py  test_tasks.py
tubee/: __init__.py  commands.py  config.py  exceptions.py  formatter.py  forms.py  handler.py  tasks.py
(+241 files in other folders)
