[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["tubee", "migrations"]

[tool.poetry]
name = "tubee"
version = "0.1.0"
description = "A Web Application for Monitoring New YouTube Videos"
license = "MIT License"
authors = ["Tomy Hsieh <tomy0000000@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/tomy0000000/Tubee"
repository = "https://github.com/tomy0000000/Tubee"
documentation = "https://github.com/tomy0000000/Tubee/wiki"

[tool.poetry.dependencies]
python = "^3.8"
Authlib = "*"
Flask = "*"
Flask-Bcrypt = "*"
Flask-Login = "*"
Flask-Migrate = "*"
Flask-Moment = "*"
Flask-SQLAlchemy = "*"
Flask-WTF = "*"
WTForms = "*"
Werkzeug = "*"
beautifulsoup4 = "*"
celery = "*"
click = "*"
dropbox = "*"
google-api-python-client = "*"
google-auth = "*"
google-auth-oauthlib = "*"
gunicorn = "*"
lxml = "*"
psycopg2 = "*"
pushover-complete = "*"
pyRFC3339 = "*"
python-dateutil = "*"
python-dotenv = "*"
requests = "*"
youtube-dl = "*"
sentry-sdk = {extras = ["flask"], version = "^1.4.1"}

[tool.poetry.dev-dependencies]
argh = "*"
codecov = "*"
coverage = "*"
flask-shell-ipython = "*"
pyyaml = "*"
rope = "*"
watchdog = "*"
flake8 = "^3.9.2"
black = "^21.9b0"

[tool.pyright]
include = ["tubee"]
exclude = [
    "**/__pycache__",
]
